src/objects/Account_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Expiry_Date__c</fullName>
        <defaultValue>TODAY() + 365</defaultValue>
        <label>Approval Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>To Be Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Approval</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>